# figure-tools

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  changelog.md  dummy.py  environment.yml  pyproject.toml
.github/workflows/: codeql-analysis.yml  python-package-conda.yml
doc/images/: create_quickstart_figure.py
figure_tools/: __init__.py  _config.py  colors.py  figure.py  figure_style.mplstyle  labels.py  save.py
mist/: test.py
test/: test_build_image_path.py  test_colors.py  test_create_figure.py  test_save_figure.py  test_version.py
tests/: test_build_image_path.py  test_colors.py  test_config.py  test_create_figure.py  test_figure_tools.py  test_image_path.py  test_save_figure.py
