[tool.poetry]
name = "figure-tools"
version = "0.3.2-dev0"
description = ""
authors = ["thaeber"]

[tool.poetry.dependencies]
python = ">=3.7"
matplotlib = ">=3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mpl = "^0.11"
bump2version = "^1.0.1"
mypy = "^0.790"
pylint = "^2.6.0"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
