[tool.poetry]
name = "figure-tools"
version = "0.4.6"
description = ""
authors = ["thaeber"]

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = "^3.7.2"
environs = "^9.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mpl = "^0.16.1"
bump2version = "^1.0.1"
mypy = "^1.4.1"
pylint = "^2.17.4"
yapf = "^0.40.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
