[tool.poetry]
name = "figure-tools"
version = "0.4.12"
description = ""
authors = ["thaeber"]

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.7.2"
environs = ">=9.5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
black = ">=25.1"
git-changelog = ">=2.5"
pre-commit = ">=4.1"
bump-my-version = ">=0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true

[tool.bumpversion]
current_version = "0.4.12"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '''^version\s*=\s*([\'\"\`])({current_version})\1'''
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "figure_tools/version.py"

[[tool.bumpversion.files]]
filename = "test/test_version.py"

[tool.git-changelog]
convention = "angular"
in-place = false
output = "changelog.md"
provider = "github"
sections = "fix,feat,refactor,chore,style,build,test"
template = "angular"
